added vectors to the page game

--- a/game.html
+++ b/game.html
@@ -13,6 +13,16 @@
     <title>Le Guillotine</title>
 </head>
 <body>
-    
+    <h7>La siguiente persona es...</h7>
+    <div class="verdugo">
+        <img src="/img/verdugo.png"/>
+    </div>
+    <div class="vectors">
+        <img src="/img/guillotine_vector.png" />
+    </div>
+    <div>
+        <button class="button">Guillotinear</button>
+        <button class="reset_button" type="reset">Reset</button>
+    </div>
 </body>
 </html>
