--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="wrapper__home-page">
       <div class="box__start-game">
         <h1 class="title__start-game">Le Guillotine Game</h1>
-        <a href="#" class="btn button__start-game">Start game</a>
+        <a href="../game.html" class="btn button__start-game">Start game</a>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
