delated vectors and added the illustration

--- a/game.html
+++ b/game.html
@@ -18,8 +18,7 @@
     <p id="person"></p>
     <!-- Div Vectores -->
     <div class="vectors">
-        <img src="/img/verdugo.png" class="verdugo"/>
-        <img src="/img/guillotine_vector.png" class="guillotine"/>
+        <img src="/img/whole_vector_illustration.png" class="illustration"/>
     </div>
     </div>
     <div>
