--- a/game.html
+++ b/game.html
@@ -14,11 +14,13 @@
 </head>
 <body>
     <!-- Div listas -->
+    <div class="coderText">
     <h7>La siguiente persona es...</h7>
     <p id="person"></p>
+    </div>  
     <!-- Div Vectores -->
-    <div class="vectors">
-        <img src="/img/whole_vector_illustration.png" class="illustration"/>
+    <div>
+        <img src="/img/whole_illustration.png" class="illustration"/>
     </div>
     </div>
     <div>
