--- a/endgame.html
+++ b/endgame.html
@@ -28,13 +28,12 @@
         </p>
       </div>
 
-      <a href="#" class="btn button__endgame">BOTON</a>
+      <a href="index.html" class="btn button__endgame">BOTON</a>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="./js/index.js"></script>
   </body>
 </html>
