--- a/endgame.html
+++ b/endgame.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <section class="wrapper__endgame">
-      <div class="box__endgame sanwich">
+      <div class="box__endgame">
         <p>
           HABÉIS SIDO GUILLOTINEADXS POR
           <span class="lil_chickens"> LXS POLLITXS</span>
@@ -37,3 +37,5 @@
     ></script>
   </body>
 </html>
+
+
