Dialogue box on endgame

--- a/endgame.html
+++ b/endgame.html
@@ -23,8 +23,14 @@
     <section class="wrapper__endgame">
       <div class="box__endgame">
         <p>
-          HABÉIS SIDO GUILLOTINEADXS POR
-          <span class="lil_chickens"> LXS POLLITXS</span>
+          HABÉIS SIDO
+        </p>
+        <p>
+          GUILLOTINEADXS 
+        </p>
+        <p>
+          POR LXS
+          <span class="lil_chickens"> POLLITXS</span>
         </p>
       </div>
 
