added button style in endgame page

--- a/endgame.html
+++ b/endgame.html
@@ -34,7 +34,7 @@
         </p>
       </div>
 
-      <a href="index.html" class="btn button__endgame">BOTON</a>
+      <a href="/game.html" class="btn button__endgame">START AGAIN</a>
     </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
