Edited html + Redirect into endgame

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
 
     <section class="wrapper__game">
         <div class="coderText">
-            <h7 id="initialText"> siguiente persona es...</h7>
+            <h7 id="initialText">La siguiente persona es...</h7>
             <p id="person"></p>
         </div> 
 
