--- a/endgame.html
+++ b/endgame.html
@@ -7,10 +7,7 @@
     <title>EndGame</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap" rel="stylesheet"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/endgame.css" />
+    <link rel="stylesheet" href="./css/media_queries.css">
   </head>
   <body>
     <section class="wrapper__endgame">
