--- a/endgame.html
+++ b/endgame.html
@@ -14,8 +14,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/endgame.css" />
-    <link rel="stylesheet" href="./css/media_queries.css">
+    <link rel="stylesheet" href="./css/endgame.css" type="text/css" />
+    <link rel="stylesheet" href="./css/media_queries.css" type="text/css" />
   </head>
   <body>
     <section class="wrapper__endgame">
